--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,7 @@ dependencies = [
     "httpx>=0.27.0",
     "python-dotenv>=1.0.1",
     "pydantic>=2.6.3",
-    "rich>=13.7.1"
+    "rich>=13.7.1",
+    "langchain>=0.1.7",
+    "langchain-openai>=0.0.5"
 ]
